# kimm_trajectory_smoother

./: CMakeLists.txt  package.xml
bindings/python/: CMakeLists.txt  Path.cpp  Trajectory.cpp  module.cpp
bindings/python/kimm_trajectory/: __init__.py
example/: Example.cpp  Test.cpp  maxVelocity.txt  py_example.py  trajectory.txt
include/kimm_trajectory/: Path.h  Trajectory.h
include/kimm_trajectory/bindings/: Path.hpp  Trajectory.hpp  expose_Path.hpp  expose_Trajectory.hpp
include/kimm_trajectory_smoother/: Trajectory.h
include/kimm_trajectory_smoother/bindings/: Path.hpp  Trajectory.hpp  expose_Path.hpp  expose_Trajectory.hpp  fwd.hpp
src/: Path.cpp  Trajectory.cpp
